<resources>
    <string name="app_name">Woopy Learning</string>
    <string name="app_type_animals">Type of Animals</string>
    <string name="app_wild_animals">Wild Animals</string>
    <string name="app_sea_animals">Sea Animals</string>
    <string name="app_farm_animals">Farm Animals</string>
    <string name="app_mammal_animals">Mammal Animals</string>
    <string name="app_bird_animals">Bird Animals</string>
    <string name="app_play">Let\'s Play</string>
    <string name="app_listen">Listen to it</string>
    <string name="app_find">Find the match</string>
    <string name="app_score">Score</string>

    <!--Welcome Page-->
    <string name="title_for_welcome_page">Let’s start the journey!</string>
    <string name="dec_for_woopy_logo">This is the image of the Woopy logo</string>
    <string name="dex_img_icon_next">This is the image for icon arrow next</string>
    <!--Top Menu-->
    <string name="learn_now">Learn Now</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="menu">menu</string>
    <!--Content Description-->
    <string name="des_wild_animals">This is the wild Animals</string>
    <string name="des_sea_animals">This is the sea Animals</string>
    <string name="des_farm_animals">This is the farm Animals</string>
    <string name="des_mammal_animals">This is mammal Animals</string>
    <string name="des_bird_animals">This is bird Animals</string>
    <string name="des_image_bg_wild">image_bg_wild</string>
    <string name="des_image_animals_wild_snake">image_animals_wild_snake</string>
    <string name="des_image_bg_sea">image_bg_sea</string>
    <string name="des_image_animals_sea_whale">image_animals_sea_whale</string>
    <string name="des_image_bg_farm">image_bg_farm</string>
    <string name="des_image_animals_farm_cow">image_animals_farm_cow</string>
    <string name="des_image_bg_mammal">image_bg_mammal</string>
    <string name="des_image_animals_mammal_monkey">image_animals_mammal_monkey</string>
    <string name="des_image_bg_bird">image_bg_bird</string>
    <string name="des_image_animals_bird_eagle">image_animals_bird_eagle</string>
    <!--Label-->
    <string name="txt_wild_animals">Wild Animals</string>
    <string name="farm_animals">Farm Animals</string>
    <string name="sea_animals">Sea Animals</string>
    <string name="mammal_animals">Mammal Animals</string>
    <string name="bird_animals">Bird Animals</string>
    <string name="speed">Speed</string>
    <string name="lifespan">Lifespan</string>
    <string name="habitat">Habitat</string>
    <string name="diet">Diet</string>
    <string name="what_animas_is_it">What animal is it ?</string>
    <string name="select_your_answer">Select your answer :</string>
    <string name="this_is_the_image_for_listen">this is the image for listen</string>
    <string name="nextqus">Next Questions</string>
    <string name="image_quiz">image quiz</string>
    <string name="next">NEXT</string>
    <string name="your_score">Your Score</string>
    <string name="finish">FINISH</string>
    <string name="des_image_score">des_image_score</string>
    <string name="divider">/</string>
    <string name="guess_who_am_i">Guess who am i ?</string>
    <string name="des_animal_shadow">animal shadow</string>
</resources>