<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_purple"
    tools:context=".ListenActivity">

    <TextView
        android:id="@+id/text_question"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="207dp"
        android:text="@string/what_animas_is_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/framelayout_listen_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/bg_play"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/this_is_the_image_for_listen"
                app:srcCompat="@drawable/ic_play" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/text_answer"
        style="@style/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22dp"
        android:text="@string/select_your_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framelayout_listen_play" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_listen_1"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="31dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/bg_animals_card"
        app:cardCornerRadius="@dimen/radio_coner_cardview"
        app:layout_constraintEnd_toStartOf="@+id/cardview_listen_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_answer">

        <ImageView
            android:id="@+id/imageView_listen_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/layout_margin_listen"
            android:contentDescription="@string/this_is_the_image_for_listen"
            android:padding="@dimen/layout_padding_listen"
            app:srcCompat="@drawable/icon_12" />

        <TextView
            android:id="@+id/text_listen_1"
            style="@style/des_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginVertical="3dp"
            tools:text="TIGER" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_listen_2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/bg_animals_card"
        app:cardCornerRadius="@dimen/radio_coner_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_answer">

        <ImageView
            android:id="@+id/imageView_listen_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/layout_margin_listen"
            android:contentDescription="@string/this_is_the_image_for_listen"
            android:padding="@dimen/layout_padding_listen"
            app:srcCompat="@drawable/icon_06" />

        <TextView
            android:id="@+id/text_listen_2"
            style="@style/des_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginVertical="3dp"
            tools:text="SNAKE" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_listen_3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/bg_animals_card"
        app:cardCornerRadius="@dimen/radio_coner_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_listen_2">

        <ImageView
            android:id="@+id/imageView_listen_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/layout_margin_listen"
            android:contentDescription="@string/this_is_the_image_for_listen"
            android:padding="@dimen/layout_padding_listen"
            app:srcCompat="@drawable/icon_11" />

        <TextView
            android:id="@+id/text_listen_3"
            style="@style/des_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginVertical="3dp"
            tools:text="ELEPHANT" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_listen_4"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/bg_animals_card"
        app:cardCornerRadius="@dimen/radio_coner_cardview"
        app:layout_constraintEnd_toStartOf="@+id/cardview_listen_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_listen_1">

        <ImageView
            android:id="@+id/imageView_listen_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/layout_margin_listen"
            android:contentDescription="@string/this_is_the_image_for_listen"
            android:padding="@dimen/layout_padding_listen"
            app:srcCompat="@drawable/icon_07" />

        <TextView
            android:id="@+id/text_listen_4"
            style="@style/des_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginVertical="3dp"
            tools:text="FOX" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_listen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bg_animals_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_listen_3"
        tools:text="SUBMIT" />

</androidx.constraintlayout.widget.ConstraintLayout>